--- a/src/static/pretixcontrol/less/forms.less
+++ b/src/static/pretixcontrol/less/forms.less
@@ -28,6 +28,10 @@ td > .form-group > .checkbox {
     .box-shadow(none);
 }
 
+div[data-formset-body], div[data-formset-form], div[data-nested-formset-form], div[data-nested-formset-body] {
+    width: 100%;
+}
+
 .form-plugins .panel-title {
 	line-height: 34px;
 }
