--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -1,6 +1,7 @@
 {% load compress %}
 {% load staticfiles %}
 {% load i18n %}
+{% load eventurl %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -22,7 +23,7 @@
 <div class="container event">
     <div class="page-header">
         <h1 class="pull-left">
-            <a href="{% url "presale:event.index" event=event.slug organizer=event.organizer.slug %}">{{ event.name }}</a>
+            <a href="{% eventurl event "presale:event.index" %}">{{ event.name }}</a>
             <small>{{ event.date_from|date:"DATE_FORMAT" }}{% if event.settings.show_date_to %} – {{ event.date_to|date:"DATE_FORMAT" }}{% endif %}</small>
         </h1>
         <div class="pull-right loginbox">
