--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -1,5 +1,6 @@
 {% extends "pretixpresale/event/base.html" %}
 {% load i18n %}
+{% load eventurl %}
 {% load thumbnail %}
 {% block title %}{% trans "Presale" %}{% endblock %}
 
@@ -23,7 +24,7 @@
                 </div>
                 <div class="col-md-4 col-md-offset-2 col-xs-12">
                     <a class="btn btn-block btn-primary btn-lg"
-                            href="{% url "presale:event.checkout.start" organizer=request.event.organizer.slug event=request.event.slug %}">
+                            href="{% eventurl request.event "presale:event.checkout.start" %}">
                         <i class="fa fa-shopping-cart"></i> {% trans "Proceed with checkout" %}
                     </a>
                 </div>
@@ -51,7 +52,7 @@
     {% endif %}
     {% if event.presale_is_running or event.settings.show_items_outside_presale_period %}
         <form method="post" data-asynctask
-                action="{% url "presale:event.cart.add" organizer=request.event.organizer.slug event=request.event.slug %}?next={{ request.path|urlencode }}">
+                action="{% eventurl request.event "presale:event.cart.add" %}?next={{ request.path|urlencode }}">
             {% csrf_token %}
             {% for tup in items_by_category %}
                 <section>
