Removed a orphaned middot

--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -35,7 +35,7 @@
                             </a>
                         {% endif %}
                     {% endfor %}
-                </div> &middot;
+                </div>
             {% endif %}
         </div>
         <div class="clearfix"></div>
