--- a/src/pretix/control/templates/pretixcontrol/items/fragment_quota_availability.html
+++ b/src/pretix/control/templates/pretixcontrol/items/fragment_quota_availability.html
@@ -3,9 +3,9 @@
     <span class="label label-warning">{% trans "Sold out (pending orders)" %}</span>
 {% elif availability.0 == 100 %}
     <span class="label label-success">{% blocktrans trimmed with num=availability.1 %}
-        {{ num }} left{% endblocktrans %}</span>
+        {{ num }} available{% endblocktrans %}</span>
 {% elif availability.0 == 20 %}
-    <span class="label label-warning">{% trans "All reserved" %}</span>
+    <span class="label label-warning">{% trans "Sold out (or reserved)" %}</span>
 {% elif availability.0 == 0 %}
     <span class="label label-danger">{% trans "Sold out" %}</span>
 {% endif %}
