Added form errors to all bootstrap forms

--- a/src/pretix/control/templates/pretixcontrol/event/payment.html
+++ b/src/pretix/control/templates/pretixcontrol/event/payment.html
@@ -4,6 +4,7 @@
 {% block inside %}
 	<form action="" method="post" class="form-horizontal form-plugins">
 		{% csrf_token %}
+        {% bootstrap_form_errors formset %}
 		<fieldset>
 			<legend>{% trans "Payment settings" %}</legend>
 			{% for provider in providers %}
@@ -16,7 +17,7 @@
 						</div>
 					</div>
 					<div class="panel-body">
-						{%  bootstrap_form provider.form layout='horizontal' %}
+						{% bootstrap_form provider.form layout='horizontal' %}
                         {% with c=provider.settings_content %}
                             {% if c %}{{ c|safe }}{% endif %}
                         {% endwith %}
