--- a/src/pretix/control/templates/pretixcontrol/event/tickets.html
+++ b/src/pretix/control/templates/pretixcontrol/event/tickets.html
@@ -5,7 +5,8 @@
     <form action="" method="post" class="form-horizontal" enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset>
-            <legend>{% trans "Ticket download" %}</legend>
+            <legend>{% trans "Ticket download" %}</legend>a
+            {% bootstrap_form_errors form %}
             {% bootstrap_field form.ticket_download layout="horizontal" %}
             {% bootstrap_field form.ticket_download_date layout="horizontal" %}
             {% for provider in providers %}
@@ -18,7 +19,7 @@
                         </div>
                     </div>
                     <div class="panel-body">
-                        {%  bootstrap_form provider.form layout='horizontal' %}
+                        {% bootstrap_form provider.form layout='horizontal' %}
                         {% with c=provider.settings_content %}
                             {% if c %}{{ c|safe }}{% endif %}
                         {% endwith %}
