--- a/src/pretix/control/templates/pretixcontrol/events/create.html
+++ b/src/pretix/control/templates/pretixcontrol/events/create.html
@@ -6,6 +6,7 @@
 	<h1>{% trans "Create a new event" %}</h1>
     <form action="" method="post" class="form-horizontal">
         {% csrf_token %}
+        {% bootstrap_form_errors form %}
         <fieldset>
             <legend>{% trans "General information" %}</legend>
             {% bootstrap_field form.name layout="horizontal" %}
