--- a/src/pretix/control/templates/pretixcontrol/event/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/event/settings.html
@@ -12,6 +12,7 @@
             {% bootstrap_field form.date_from layout="horizontal" %}
             {% bootstrap_field form.date_to layout="horizontal" %}
             {% bootstrap_field form.currency layout="horizontal" %}
+            {% bootstrap_field form.is_public layout="horizontal" %}
         </fieldset>
         <fieldset>
             <legend>{% trans "Display settings" %}</legend>
