Refs #82 -- Make order expiry more clear

--- a/src/pretix/control/templates/pretixcontrol/event/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/event/settings.html
@@ -33,6 +33,7 @@
             {% bootstrap_field sform.show_items_outside_presale_period layout="horizontal" %}
             {% bootstrap_field sform.payment_term_days layout="horizontal" %}
             {% bootstrap_field sform.payment_term_last layout="horizontal" %}
+            {% bootstrap_field sform.payment_term_expire_automatically layout="horizontal" %}
             {% bootstrap_field sform.payment_term_accept_late layout="horizontal" %}
             {% bootstrap_field sform.last_order_modification_date layout="horizontal" %}
         </fieldset>
