--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -47,6 +47,17 @@
             </form>
         {% endif %}
     {% endif %}
+    {% if order.is_expired_by_time %}
+        <form action="{% url "control:event.order.transition" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}"
+                method="post">
+            {% csrf_token %}
+            <div class="alert alert-info">
+                <button name="status" value="e" class="btn btn-default pull-right">{% trans "Expire order" %}</button>
+                {% trans "The payment for this order is overdue, but you have configured not to expire orders automatically. To free quota capacity, you can mark it as expired manually." %}
+                <div class="clearfix"></div>
+            </div>
+        </form>
+    {% endif %}
 
     <div class="row">
         <div class="col-xs-12 col-lg-10">
