--- a/src/pretix/presale/templates/pretixpresale/event/fragment_order_status.html
+++ b/src/pretix/presale/templates/pretixpresale/event/fragment_order_status.html
@@ -5,7 +5,7 @@
 {% elif order.status == "p" %}
     <span class="label label-success {{ class }}">{% trans "Paid" %}</span>
 {% elif order.status == "e" %}
-    <span class="label label-danger {{ class }}">{% trans "Payment pending" %}</span>
+    <span class="label label-danger {{ class }}">{% trans "Expired" %}</span>
 {% elif order.status == "c" %}
     <span class="label label-danger {{ class }}">{% trans "Cancelled" %}</span>
 {% elif order.status == "r" %}
