Consistent use of static files template tags

--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -1,6 +1,6 @@
 {% extends "pretixpresale/base.html" %}
 {% load i18n %}
-{% load static %}
+{% load staticfiles %}
 {% load eventurl %}
 {% block thetitle %}
     {% block title %}{% endblock %}{% if url_name != "event.index" %} :: {% endif %}{{ event.name }}
