--- a/src/pretix/control/templates/pretixcontrol/item/index.html
+++ b/src/pretix/control/templates/pretixcontrol/item/index.html
@@ -18,6 +18,11 @@
 			{% bootstrap_field form.default_price layout="horizontal" %}
 			{% bootstrap_field form.tax_rate layout="horizontal" %}
 		</fieldset>
+		<fieldset>
+			<legend>{% trans "Availability" %}</legend>
+			{% bootstrap_field form.available_from layout="horizontal" %}
+			{% bootstrap_field form.available_until layout="horizontal" %}
+		</fieldset>
 		<div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
                 {% trans "Save" %}
