--- a/src/pretix/control/templates/pretixcontrol/items/quota.html
+++ b/src/pretix/control/templates/pretixcontrol/items/quota.html
@@ -25,12 +25,12 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion"
-                                   href="#collapse{{ item.identity }}">
+                                   href="#collapse{{ item.id }}">
                                     {{ item.name }}
                                 </a>
                             </h4>
                         </div>
-                        <div id="collapse{{ item.identity }}" class="panel-collapse collapse in">
+                        <div id="collapse{{ item.id }}" class="panel-collapse collapse in">
                             <div class="panel-body">
                                 <div class="form-horizontal">
                                     {% bootstrap_field item.field layout="horizontal" %}
