--- a/src/pretix/control/templates/pretixcontrol/items/quotas.html
+++ b/src/pretix/control/templates/pretixcontrol/items/quotas.html
@@ -20,19 +20,19 @@
             <tbody>
                 {% for q in quotas %}
                 <tr>
-                    <td><strong><a href="{% url "control:event.items.quotas.edit" organizer=request.event.organizer.slug event=request.event.slug quota=q.identity %}">{{ q.name }}</a></strong></td>
+                    <td><strong><a href="{% url "control:event.items.quotas.edit" organizer=request.event.organizer.slug event=request.event.slug quota=q.id %}">{{ q.name }}</a></strong></td>
                     <td>
                         <ul>
                             {% for item in q.items.all %}
                                 <li><a href="
-                                {% url "control:event.item" organizer=request.event.organizer.slug event=request.event.slug item=item.identity %}"
+                                {% url "control:event.item" organizer=request.event.organizer.slug event=request.event.slug item=item.id %}"
                                         >{{ item.name }}</a></li>
                             {% endfor %}
                         </ul>
                     </td>
                     <td>{{ q.size }}</td>
                     <td>{% include "pretixcontrol/items/fragment_quota_availability.html" with availability=q.availability %}</td>
-                    <td class="text-right"><a href="{% url "control:event.items.quotas.delete" organizer=request.event.organizer.slug event=request.event.slug quota=q.identity %}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a></td>
+                    <td class="text-right"><a href="{% url "control:event.items.quotas.delete" organizer=request.event.organizer.slug event=request.event.slug quota=q.id %}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 {% endfor %}
             </tbody>
