--- a/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
@@ -26,7 +26,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#cp{{ form.pos.identity }}"
+                            <a data-toggle="collapse" href="#cp{{ form.pos.id }}"
                                     data-parent="#questions_accordion">
                                 <strong>{{ form.pos.item.name }}</strong>
                                 {% if form.pos.variation %}
@@ -35,7 +35,7 @@
                             </a>
                         </h4>
                     </div>
-                    <div id="cp{{ form.pos.identity }}"
+                    <div id="cp{{ form.pos.id }}"
                             class="panel-collapse collapsed in">
                         <div class="panel-body">
                             {% bootstrap_form form layout="horizontal" %}
