--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -109,7 +109,7 @@
                                                 <div class="col-md-2 col-xs-6 availability-box available">
                                                     <input type="number" class="form-control input-item-count" placeholder="0" min="0"
                                                             max="{{ var.cached_availability.1 }}"
-                                                            name="variation_{{ item.id }}_{{ var.variation.id }}">
+                                                            name="variation_{{ item.id }}_{{ var.id }}">
                                                 </div>
                                             {% else %}
                                                 {% include "pretixpresale/event/fragment_availability.html" with avail=var.cached_availability.0 %}
