--- a/src/pretix/control/templates/pretixcontrol/event/mail.html
+++ b/src/pretix/control/templates/pretixcontrol/event/mail.html
@@ -4,9 +4,14 @@
 {% block inside %}
     <form action="" method="post" class="form-horizontal" enctype="multipart/form-data">
         {% csrf_token %}
+        {% bootstrap_form_errors form %}
+        <fieldset>
+            <legend>{% trans "E-mail settings" %}</legend>
+            {% bootstrap_field form.mail_prefix layout="horizontal" %}
+            {% bootstrap_field form.mail_from layout="horizontal" %}
+        </fieldset>
         <fieldset>
             <legend>{% trans "E-mail content" %}</legend>
-            {% bootstrap_form_errors form %}
             {% bootstrap_field form.mail_text_order_placed layout="horizontal" %}
             {% bootstrap_field form.mail_text_order_paid layout="horizontal" %}
         </fieldset>
